# Polygmap

./: LICENSE  README.md  README0.md
docker/: Dockerfile  build.sh  readme.md  run.sh  run_with_gpu.sh
installed/include/dexhand_sdk/: touch_dexhand.h
installed/include/hardware_plant/: actuators_interface.h  ankle_solver.h  hand_controller.h  hardware_plant.h  lejuclaw_controller.h  touch_hand_controller.h
installed/include/hipnuc_imu/: hipnuc_imu_receiver.h
installed/include/humanoid_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
installed/include/humanoid_interface/: HumanoidPreComputation.h
installed/include/humanoid_interface_drake/: humanoid_interface_drake.h
installed/include/humanoid_wbc/: StandUpWbc.h  WbcBase.h
installed/include/lejuclaw/: lejuclaw.h  ruiwoSDK.h
installed/lib/pkgconfig/: hardware_node.pc  humanoid_interface_drake.pc  kuavo_estimation.pc
installed/share/hardware_node/: package.xml
src/: zhiling.txt
src/convex_hull_from_marker/: CMakeLists.txt  package.xml
src/convex_hull_from_marker/launch/: convex_hull_dense.launch
src/convex_hull_from_marker/src/: convex_hull_dense_filler.cpp  convex_hull_dense_filler（复件）.cpp
src/demo/arm_capture_apriltag/: arm_capture_apriltag.py  mock_tag_publisher.py  测试使用说明.md
src/demo/control_dexhand/: pos_control.py
src/demo/gesture/: number_gesture.py
src/demo/grab_box/: CMakeLists.txt
src/demo/trace_path/: CMakeLists.txt  package.xml
src/depth_to_pointcloud/: CMakeLists.txt  package.xml
src/depth_to_pointcloud/luanch/: depth_to_cloud.launch
src/depth_to_pointcloud/src/: depth_to_cloud_node.cpp
src/gazebo/gazebo-sim/: CMakeLists.txt  my.world  my2.world
src/humanoid-control/h12pro_controller_node/: ocs2_README.md
src/humanoid-control/humanoid_controllers/: CMakeLists.txt  package.xml
src/humanoid-control/humanoid_interface_ros/: CMakeLists.txt  package.xml  test.csv
src/humanoid-control/humanoid_plan_arm_trajectory/: CMakeLists.txt
src/humanoid-control/mobile_manipulator_controllers/: CMakeLists.txt  package.xml
src/humanoid-control/mobile_manipulator_controllers/cfg/: cfg.yaml
src/humanoid-control/mobile_manipulator_controllers/include/mobile_manipulator_controllers/: mobileManipulatorController.h  mobileManipulatorVisualization.h
src/humanoid-control/mobile_manipulator_controllers/launch/: mobile_manipulator_controller.launch
src/humanoid-control/mobile_manipulator_controllers/scripts/: error_monitor.py
src/humanoid-control/mobile_manipulator_controllers/src/: controllerNode.cpp  mobileManipulatorController.cpp  mobileManipulatorIkTarget.cpp  mobileManipulatorVisualization.cpp
src/humanoid-control/mobile_manipulator_controllers/test/: CMakeLists.txt  kinematicMpcTest.cpp
src/kuavo_assets/scripts/: check_ecmaster_type.sh  trim_mesh_to_ik.py  update_mass.sh
src/kuavo_common/: CMakeLists.txt
src/kuavo_common/include/kuavo_common/: kuavo_common.h
src/kuavo_common/include/kuavo_common/common/: json_config_reader.hpp  kuavo_settings.h  robot_state.h  sensor_data.h
src/kuavo_common/src/: kuavo_common.cpp
src/kuavo_common/src/common/: kuavo_settings.cpp
src/kuavo_common/tests/: kuavo_common_test.cpp
src/kuavo_humanoid_sdk/: .gitignore  README.md  gen_docs.sh  install.sh  sdk_description.md  setup.py
src/kuavo_humanoid_sdk/examples/: websocket_mode_example.py
src/kuavo_humanoid_sdk/kuavo_humanoid_sdk/: __init__.py
src/kuavo_msgs/: CMakeLists.txt
src/kuavo_msgs/msg/: footPoseTargetTrajectories.msg
src/kuavo_msgs/srv/: playmusic.srv
src/kuavo_sdk/: CMakeLists.txt
src/manipulation_nodes/motion_capture_ik/: CMakeLists.txt  package.xml
src/manipulation_nodes/noitom_hi5_hand_udp_python/: readme_quest.md  requirements.txt
src/manipulation_nodes/pico-body-tracking-server/: README.md  body_tracking_udp_server.py  brodcast.py  utils.py
src/manipulation_nodes/planarmwebsocketservice/: README.md
src/manipulation_nodes/teach_pendant/: readme.md
src/mujoco/: CMakeLists.txt
src/mujoco/launch/: defaultQpos.yaml  nodelet.launch
src/mujoco/src/: dexhand_mujoco_node.cpp  mujoco_node.cc
src/ocs2/ocs2_core/: CMakeLists.txt
src/pointcloud_deduplicator/: CMakeLists.txt  package.xml
src/pointcloud_deduplicator/src/: deduplicator_node.cpp
src/polygon_mapping/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
src/polygon_mapping/config/: config_param.yaml
src/polygon_mapping/launch/: polygon_mapping.launch
src/polygon_mapping/msg/: MapManager.msg  Polygon3D.msg
src/polygon_mapping/src/: main.py  main0.py  main_ros.py  main_ros_gazebo.py  main_ros_gazebo_old.py  read_dataset.py  test.py
src/polygon_mapping/src/modules/: image_processes_cupy.py  mapmanager.py  ros_node.py
src/polygon_mapping_cuda/src/polygon_mapping_cuda/: CMakeLists.txt  package.xml
src/polygon_mapping_cuda/src/polygon_mapping_cuda/launch/: image_subscriber.launch
src/polygon_mapping_cuda/src/polygon_mapping_cuda/src/: anisotropic_diffusion_cuda.cu  anisotropic_diffusion_cuda.h  image_subscriber.cpp  normal_estimation_cuda.cu  normal_estimation_cuda.h  pointcloud_cuda.cu  pointcloud_cuda.h  sharpen_cuda.cu  sharpen_cuda.h
src/robot_pointcloud_filter/: CMakeLists.txt  package.xml
src/robot_pointcloud_filter/launch/: filter_pointcloud.launch
src/robot_pointcloud_filter/src/: robot_pointcloud_filter.cpp
src/robot_visual_pointcloud/: CMakeLists.txt  package.xml
src/robot_visual_pointcloud/launch/: visual_pointcloud.launch
src/robot_visual_pointcloud/src/: visual_pointcloud_node.cpp  visual_pointcloud_node（复件）.cpp
tools/: setup-kuavo-ros-control.sh
tools/check_tool/: Hardware_tool.py  arm_breakin.sh  arm_setzero.sh  gen_touch_dexhand_serial_rules.sh  ruiwo_negtive_set.sh  touch_dexhand_test.sh
tools/check_tool/leju_claw_driver/: lejuclaw_test  lejuclaw_test.sh
tools/check_tool/report_robot_network_info_service/: RRNIS.env  RRNIS_script.py
tools/check_tool/selfCheckScripts/: CameraCheck.py  LidarCheck.py  (+4 more)
tools/crash-report/: CrashReport.sh
tools/linux_wifi_hotspot/: kuavo_hotspot_install.sh
tools/udev_rules/: Readme.md
(+336 files in other folders)
