<?xml version="1.0"?>
<package format="2">
  <name>convex_hull_from_marker</name>
  <version>0.0.1</version>
  <description>Project to generate dense point clouds from Marker messages via convex hull and affine transforms</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 主要构建依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>eigen</build_depend>

  <!-- 执行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>eigen</exec_depend>

  <!-- 支持 boost.geometry -->
  <depend>libboost-dev</depend>

  <!-- 可选：其他支持工具 -->
  <export>
  </export>
</package>
