<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_deduplicator</name>
  <version>0.1.0</version>
  <description>Remove duplicates from one pointcloud using another</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>

