<?xml version="1.0"?>
<package format="2">
  <name>robot_pointcloud_filter</name>
  <version>1.0.0</version>
  <description>Filter pointcloud by removing robot self-points based on URDF</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>geometric_shapes</depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>Eigen</build_depend>

  <exec_depend>pcl_conversions</exec_depend>
</package>
