<?xml version="1.0"?>
<package format="2">
  <name>robot_visual_pointcloud</name>
  <version>0.0.1</version>
  <description>Generate pointcloud from robot visual mesh using MoveIt</description>

  <maintainer email="you@example.com">POWER</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_core</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_listener</depend>
</package>

