<package format="2">
  <name>polygon_mapping_cuda</name>
  <version>0.0.0</version>
  <description>RealSense L515 image subscriber with OpenCV</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <exec_depend>opencv</exec_depend>
</package>
